--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body
     position: relative;
     width: 300px;
     height: 380px;
-    background: url(/img/fingerPrint_01.png);
+    background: url(/fingerPrint_01.png);
     background-size: 300px;
 }
 .scan .fingerprint::before
@@ -36,7 +36,7 @@ body
     left: 0;
     width: 100%;
     height: 100%;
-    background: url(/img/fingerPrint_02.png);
+    background: url(/fingerPrint_02.png);
     background-size: 300px;
     animation: animate 4s ease-in-out infinite;
 }
